--- a/ReManualMsConfigServices/ReManualMsConfigServices.csproj
+++ b/ReManualMsConfigServices/ReManualMsConfigServices.csproj
@@ -7,14 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="config\AllServices.csv" />
+    <None Remove="config\DisabledServices.txt" />
+    <None Remove="config\DontTouchServices.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
+    <PackageReference Include="System.Management" Version="4.7.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="SvcsMustStayDisabled.txt">
+    <EmbeddedResource Include="config\DisabledServices.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </EmbeddedResource>
+    <EmbeddedResource Include="config\AllServices.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="config\DontTouchServices.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
